# Hackiaton-Valarezo-Figueroa-Josue

./: README.md
Backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Backend/app/: main.py
Backend/app/adapters/: insurance.py  supabase_vector_store.py
Backend/app/manager/: ConversationManager.py  InsuranceManager.py  ModelPoolManager.py  Mongo.py  Mongo_provider.py  RateLimitManager.py  TimeTrackerManager.py  UserManager.py
Backend/app/models/: distributors.py  insurance.py  supabase_vector_store.py  token.py  user.py
Backend/app/services/: InsuranceExtractionService.py  SupabaseVectorManager.py  TimeTracker.py  excel_parser.py  gemini_ocr.py  mistral_ocr.py  response_extractor.py
Backend/app/services/Middleware/: JWTMiddlewareProvider.py  LoggingMiddleware.py  RackAttackMiddleware.py  RateLimitMiddlewareProvider.py  RoleMiddleware.py  SupabaseAccessMiddleware.py
Backend/app/services/auth/: Auth.py  auth_utils.py
Backend/app/strategies/Workflows/copay_agent/: agent.py  prompts.py  tools.py
Backend/app/strategies/llms/: llm.py  vector_store_pool.py
Backend/app/utils/: text_splitter.py
FrontEnd/: index.html  package-lock.json  package.json
FrontEnd/src/: App.tsx  index.css
FrontEnd/src/api/: insuranceApi.ts
FrontEnd/src/components/admin/: UploadInsuranceForm.tsx
FrontEnd/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  ExamplePrompts.tsx  PlanSelector.tsx
FrontEnd/src/pages/: AdminPage.tsx  LandingPage.tsx
FrontEnd/src/utils/: session.ts
(+1 files in other folders)
