[project]
name = "rag-core"
version = "0.1.0"
description = "Minimal RAG MVP"
authors = [
    {name = "Team",email = "team@example.com"}
    
]

readme = "README.md"
requires-python = ">=3.10.0,<3.13"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "supabase (>=2.30.0,<3.0.0)",
    "langchain (>=1.3.1,<2.0.0)",
    "langchain-core (>=1.4.0,<2.0.0)",
    "langchain-google-genai (>=4.2.2,<5.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langgraph (>=1.2.0,<2.0.0)",
    "mistralai (>=2.4.5,<3.0.0)",
    "python-multipart (>=0.0.28,<0.0.29)",
    "tavily-python (>=0.5.0,<1.0.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
